--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <div class="home-content grid">
             <div class="home-social">
               <a
-                href="https://www.linkedin.com/feed/"
+                href="https://www.linkedin.com/in/kingsly-s-b8ab1529a/"
                 target="_blank"
                 class="home-social-icon"
               >
@@ -223,7 +223,6 @@
           <div class="skills-name">Socket.io</div>
           <div class="skills-name">Authentication</div>
           <div class="skills-name">Json web token</div>
-
         </div>
       </section>
       <section class="qualification section">
@@ -507,7 +506,7 @@
                   Context API.
                 </p>
                 <a
-                  href="https://chat-app-nu-three-23.vercel.app/login"
+                  href="https://chat-app-nu-three-23.vercel.app/"
                   target="_blank"
                   class="button button-flex button-small portfolio-button"
                   >Project Link
@@ -525,7 +524,7 @@
                   inquiries via Nodemailer.
                 </p>
                 <a
-                  href=""
+                  href="https://tech-yfront-apdz.vercel.app/"
                   target="_blank"
                   class="button button-flex button-small portfolio-button"
                   >Project Link
@@ -642,7 +641,7 @@
           </div>
 
           <!-- Right side: Contact Form -->
-          <form id="contact-form" action="/send-email" method="POST">
+          <form id="contactForm" action="/send-email" method="POST">
             <div class="form-group">
               <label for="name">Name</label>
               <input type="text" id="name" name="name" required />
@@ -655,12 +654,7 @@
 
             <div class="form-group">
               <label for="message">Message</label>
-              <textarea
-                id="message"
-                name="message"
-                rows="5"
-                required
-              ></textarea>
+              <textarea id="message" name="message" required></textarea>
             </div>
 
             <button type="submit">Send Message</button>
@@ -690,7 +684,7 @@
 
             <div class="footer-socials">
               <a
-                href="https://www.linkedin.com/feed/"
+                href="https://www.linkedin.com/in/kingsly-s-b8ab1529a/"
                 target="_blank"
                 class="footer-social"
               >
