--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>kingsly portfolio</title>
     <link rel="stylesheet" href="Libraries/swiper-bundle.min.css" />
     <link rel="stylesheet" href="Css/style.css" />
+    <script src="script.js"></script>
   </head>
   <body>
     <!-- header  -->
