--- a/index.html
+++ b/index.html
@@ -720,7 +720,8 @@
     <script
       src="https://kit.fontawesome.com/9b634c15bd.js"
       crossorigin="anonymous"
-    ></script>
-    <script src="script.js"></script>
+    >
+  </script>
+    
   </body>
 </html>
