--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <title>kingsly portfolio</title>
     <link rel="stylesheet" href="Libraries/swiper-bundle.min.css" />
     <link rel="stylesheet" href="Css/style.css" />
-    <script src="script.js"></script>
+    <!-- Toastify CSS -->
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
+    />
+    <!-- Toastify JS -->
+    <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
   </head>
   <body>
     <!-- header  -->
@@ -642,7 +649,7 @@
           </div>
 
           <!-- Right side: Contact Form -->
-          <form id="contactForm" action="/send-email" method="POST">
+          <form id="contact-form">
             <div class="form-group">
               <label for="name">Name</label>
               <input type="text" id="name" name="name" required />
@@ -720,8 +727,7 @@
     <script
       src="https://kit.fontawesome.com/9b634c15bd.js"
       crossorigin="anonymous"
-    >
-  </script>
-    
+    ></script>
+    <script src="script.js"></script>
   </body>
 </html>
