--- a/index.html
+++ b/index.html
@@ -852,7 +852,7 @@
       }
 
       /* Floating WhatsApp Button */
-      .floating-whatsapp {
+      /* .floating-whatsapp {
         position: fixed;
         width: 60px;
         height: 60px;
@@ -875,7 +875,7 @@
       .floating-whatsapp:hover {
         transform: scale(1.1);
         box-shadow: 0 6px 25px rgba(37, 211, 102, 0.6);
-      }
+      } */
 
       @keyframes pulse-whatsapp {
         0% {
