--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
             <div class="about-buttons">
               <a
                 download=""
-                href="KINGSLY RESUME.pdf"
+                href="portfolio-resume.pdf"
                 class="button button-flex"
               >
                 Download Resume<i
